# Smart_Calculator

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/gui/: calc.ui  credit.ui  deposit.ui  graph.ui  rs.qrc
src/include/: calc.h  controller.h  credit.h  deposit.h  graph.h  model.h  qcustomplot.h
src/sources/: calc-insertion.cc  calc.cc  controller.cc  credit.cc  deposit.cc  graph.cc  main.cc  model-financial.cc  model.cc  qcustomplot.cpp
src/tests/: evaluation.cc  financial.cc  tests.h
